# FastApi

./: .gitignore  README.md  config.py  logger.py  main.py  pyproject.toml  run-dev.bat
downloads/: archivo.xlsx
src/: app.py
src/utils/: error_handler.py
templates/: plantilla.html
