[project]
name = "src"
version = "0.1.0"
description = "Proyecto para presentar con FastAPI"
authors = [
    {name = "ZiggyHan",email = "alexi.numat@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.3)",
    "uvicorn (>=0.23.2)",
    "requests (>=2.32.3)",
    "pandas (>=2.2.1)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pydantic (>=2.10)",
    "pydantic-settings (>=2.8.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
